--- a/OpenAPI2XMLSchema/OpenAPI2XMLSchema.csproj
+++ b/OpenAPI2XMLSchema/OpenAPI2XMLSchema.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NJsonSchema" Version="10.0.27" />
+    <PackageReference Include="NJsonSchema" Version="10.1.2" />
+    <PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
+    <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
